--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "mongoose": "^8.6.1",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18"
