--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongoose": "^8.6.1",
     "next": "14.2.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "22.5.4",
